--- a/pom.xml
+++ b/pom.xml
@@ -1610,8 +1610,8 @@
 
         <carbon.analytics.common.version>5.2.21</carbon.analytics.common.version>
         <!-- Carbon kernel version -->
-        <carbon.kernel.version>4.6.0-alpha4</carbon.kernel.version>
-        <carbon.kernel.feature.version>4.6.0-alpha4</carbon.kernel.feature.version>
+        <carbon.kernel.version>4.6.0-beta</carbon.kernel.version>
+        <carbon.kernel.feature.version>4.6.0-beta</carbon.kernel.feature.version>
         <carbon.kernel.package.import.version.range>[4.5.0, 5.0.0)</carbon.kernel.package.import.version.range>
 
         <carbon.commons.version>4.7.23</carbon.commons.version>
@@ -1619,9 +1619,9 @@
         <carbon.mediation.version>4.7.33</carbon.mediation.version>
 
         <!-- Carbon Identity versions -->
-        <carbon.identity.version>5.16.56</carbon.identity.version>
+        <carbon.identity.version>5.16.66</carbon.identity.version>
         <carbon.identity.governance.version>1.3.45</carbon.identity.governance.version>
-        <carbon.identity-inbound-auth-oauth.version>6.2.119</carbon.identity-inbound-auth-oauth.version>
+        <carbon.identity-inbound-auth-oauth.version>6.2.123</carbon.identity-inbound-auth-oauth.version>
         <carbon.identity-oauth2-grant-jwt.version>1.0.26</carbon.identity-oauth2-grant-jwt.version>
         <carbon.identity-user-ws.version>5.3.6</carbon.identity-user-ws.version>
         <carbon.identity-inbound-auth-saml2.version>5.4.9</carbon.identity-inbound-auth-saml2.version>
