Fix graphql to postman convert issue

--- a/features/apimgt/org.wso2.carbon.apimgt.store.feature/src/main/resources/devportal/jsconfig.json
+++ b/features/apimgt/org.wso2.carbon.apimgt.store.feature/src/main/resources/devportal/jsconfig.json
@@ -8,6 +8,7 @@
             "AppComponents/*": ["source/src/app/components/*"],
             "AppData/*": ["source/src/app/data/*"],
             "AppTests/*": ["source/Tests/*"],
+            "AppWorkers/*": ["source/src/app/webWorkers/*"]
         }
     },
     "include": ["./source"],
