--- a/features/apimgt/org.wso2.carbon.apimgt.store.feature/src/main/resources/devportal/package.json
+++ b/features/apimgt/org.wso2.carbon.apimgt.store.feature/src/main/resources/devportal/package.json
@@ -129,6 +129,7 @@
         "webpack-bundle-analyzer": "^3.2.0",
         "webpack-cli": "^4.5.0",
         "webpack-dev-server": "^3.11.2",
-        "webpack-manifest-plugin": "^2.2.0"
+        "webpack-manifest-plugin": "^2.2.0",
+        "worker-loader": "^2.0.0"
     }
 }
